--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,16 +1,28 @@
-<div class="row">
-  <div class="col-sm-4">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myCategorie">Crée Categorie</button>
+
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" data-toggle="tab" href="#myCategorie">Crée Categorie</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#myUnit">Crée Unite De Mesure</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#myProduit">Crée Produit</a>
+  </li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane  active" id="myCategorie">
+    <app-categorie-create></app-categorie-create>
   </div>
-  <div class="col-sm-4">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myUnit">Crée Unite De Mesure</button>
+  <div class="tab-pane  fade" id="myUnit">
+    <app-unite-mesure-create></app-unite-mesure-create>
   </div>
-  <div class="col-sm-4">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myProduit">Crée Produit</button>
+  <div class="tab-pane  fade" id="myProduit">
+    <app-produit-create></app-produit-create>
   </div>
+
 </div>
-<app-categorie-create></app-categorie-create>
 
-<app-unite-mesure-create></app-unite-mesure-create>
-
-<app-produit-create></app-produit-create>
