--- a/src/app/produits/unite-mesure-create/unite-mesure-create.component.html
+++ b/src/app/produits/unite-mesure-create/unite-mesure-create.component.html
@@ -1,32 +1,36 @@
-
-<!-- The Modal -->
-<div class="modal fade" id="myUnit">
-  <div class="modal-dialog">
-    <div class="modal-content">
-
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">Crée Unite De Mesure</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-
-      <!-- Modal body -->
-      <div class="modal-body">
-        <div class="form-group row">
-          <label class="col-form-label col-4" for="referenceCat">Reference Unite Mesure</label>
-          <input class="form-control col-8" id="referenceCat" type="text" placeholder="Reference Unite" [(ngModel)]="unite.referenceUnit"/>
-        </div>
-        <div class="form-group row">
-          <label class="col-form-label col-4" for="libelleCat">Libelle Unite Mesure</label>
-          <input class="form-control col-8" id="libelleCat" type="text" placeholder="Unite Mesure"  [(ngModel)]="unite.nom"/>
-        </div>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <input type="button" class="btn btn-outline-info" value="Cree Unite" (click)="saveUnite()"/>
-      </div>
-
+<div class="row">
+  <div class="col-6">
+    <h4>Crée Unite De Mesure</h4>
+    <div class="form-group row">
+      <label class="col-form-label col-4" for="referenceCat">Reference Unite Mesure</label>
+      <input class="form-control col-8" id="referenceCat" type="text" placeholder="Reference Unite" [(ngModel)]="unite.referenceUnit"/>
     </div>
+    <div class="form-group row">
+      <label class="col-form-label col-4" for="libelleCat">Libelle Unite Mesure</label>
+      <input class="form-control col-8" id="libelleCat" type="text" placeholder="Unite Mesure"  [(ngModel)]="unite.nom"/>
+    </div>
+    <div class="form-group">
+      <input type="button" class="btn btn-outline-info" value="Cree Unite" (click)="saveUnite()"/>
+    </div>
+
+  </div>
+  <div class="col-6">
+    <table class="table table-hover table-sm">
+      <thead>
+       <tr>
+         <th>Reference</th>
+         <th>Unite Mesure</th>
+         <th>Action</th>
+       </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let unt of unites">
+        <td>{{unt.referenceUnit}}</td>
+        <td>{{unt.nom}}</td>
+        <td><button class="btn btn-outline-danger" (click)="deleteUnit(unt)"><i class="fa fa-database"></i></button></td>
+        <td></td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
