--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,6 +37,23 @@
     </div>
   </section>
   <!-- End The First Part Of Header -->
+  <!-- Start The Selection Marche -->
+  <div class="form-inline">
+    <label for="pays" class="mb-2 mr-sm-2 lead font-weight-light">Pays</label>
+    <select class="form-control mb-2 mr-sm-2" id="pays">
+      <option></option>
+    </select>
+    <label for="quartier" class="mb-2 mr-sm-2 lead font-weight-light">Quartier</label>
+    <select class="form-control mb-2 mr-sm-2" id="quartier">
+      <option></option>
+    </select>
+    <label for="marche" class="mb-2 mr-sm-2 lead font-weight-light">Marche</label>
+    <select class="form-control mb-2 mr-sm-2" id="marche">
+      <option></option>
+    </select>
+    <button type="button" class="btn btn-primary mb-2 hvr-bounce-in">Valider</button>
+  </div>
+  <!-- End The Selection Marche -->
 
 
 
