--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -10,6 +10,9 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="tab" href="#myProduit">Crée Produit</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#produitMarche">Produit Marche</a>
+  </li>
 </ul>
 
 <!-- Tab panes -->
@@ -22,6 +25,9 @@
   </div>
   <div class="tab-pane  fade" id="myProduit">
     <app-produit-create></app-produit-create>
+  </div>
+  <div class="tab-pane  fade" id="produitMarche">
+    <app-produit-marche></app-produit-marche>
   </div>
 
 </div>
