--- a/src/app/produits/categorie-create/categorie-create.component.html
+++ b/src/app/produits/categorie-create/categorie-create.component.html
@@ -11,7 +11,7 @@
       <input class="form-control col-8" id="libelleCat" type="text" placeholder="Libelle Categorie" [(ngModel)]="categorieCreate.libelle"/>
     </div>
     <div class="form-group">
-      <button class="btn btn-outline-info"  (click)="saveCategorie()">Cree Categorie</button>
+      <button class="btn btn-outline-info hvr-wobble-vertical"  (click)="saveCategorie()">Cree Categorie</button>
     </div>
 
   </div>
@@ -28,7 +28,7 @@
       <tr *ngFor="let c of categories">
         <td>{{c.referenceCategorie}}</td>
         <td>{{c.libelle}}</td>
-        <td><button class="btn btn-outline-danger" (click)="deleteCat(c)"><i class="fa fa-database"></i></button></td>
+        <td><button class="btn btn-outline-danger hvr-buzz-out" (click)="deleteCat(c)"><i class="fa fa-database"></i></button></td>
       </tr>
       </tbody>
     </table>
