--- a/src/app/produits/produit-create/produit-create.component.html
+++ b/src/app/produits/produit-create/produit-create.component.html
@@ -23,15 +23,15 @@
     <div class="form-group row">
       <label class="col-form-label col-4" for="unite">Unite Mesure</label>
       <select class="form-control col-8" id="unite" [(ngModel)]="produits.uniteMesureVo.referenceUnit">
-        <option *ngFor="let unit1 of unites" value="{{unit1.referenceUnit}}">{{unit1.nom}}</option>
-      </select>
+      <option *ngFor="let unit1 of unites" value="{{unit1.referenceUnit}}">{{unit1.nom}}</option>
+    </select>
     </div>
     <div class="form-group row">
       <label class="col-form-label col-4" for="picture">Photo de Produit</label>
       <input class="form-control-file col-8" id="picture" type="file" [(ngModel)]="produits.image"/>
     </div>
     <div class="form-group">
-      <button  class="btn btn-outline-info" (click)="saveProduit()">Cree Produit</button>
+      <button  class="btn btn-outline-info hvr-wobble-vertical" (click)="saveProduit()">Cree Produit</button>
     </div>
 
   </div>
@@ -54,7 +54,7 @@
         <td>{{prd.qteStock}}</td>
         <td>{{prd.categorieVo.referenceCategorie}}</td>
         <td>{{prd.uniteMesureVo.referenceUnit}}</td>
-        <td><button class="btn btn-outline-danger" (click)="deleteProduit(prd)"><i class="fa fa-database"></i></button></td>
+        <td><button class="btn btn-outline-danger hvr-buzz-out" (click)="deleteProduit(prd)"><i class="fa fa-database"></i></button></td>
       </tr>
       </tbody>
     </table>
