--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~sweetalert2/dist/sweetalert2.css";
+@import "~hover.css/css/hover.css";
